[gd_scene load_steps=5 format=3 uid="uid://bbub0elfy4wf3"]

[ext_resource type="Script" uid="uid://c8t3sbitdxasd" path="res://Player/Attack/ion_laser_beam.gd" id="1"]
[ext_resource type="AudioStream" uid="uid://cc80cgfaimnqk" path="res://Audio/SoundEffect/ion_laser.mp3" id="2"]

[sub_resource type="Curve" id="2"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.35, 0.9), 0.0, 0.0, 0, 0, Vector2(0.7, 0.6), 0.0, 0.0, 0, 0, Vector2(1, 0.25), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="1"]
offsets = PackedFloat32Array(0, 0.4, 0.75, 1)
colors = PackedColorArray(1, 1, 1, 0.7, 0.5, 0.8, 1, 0.5, 0.25, 0.55, 1, 0.3, 0.1, 0.3, 0.8, 0.1)

[node name="IonLaserBeam" type="RayCast2D" groups=["attack"]]
target_position = Vector2(300, 0)
collision_mask = 2
script = ExtResource("1")

[node name="BeamLine" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, 0)
width = 3.0
default_color = Color(0.3527628, 0.5527516, 1, 1)
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="GlowLine" type="Line2D" parent="."]
z_index = -1
points = PackedVector2Array(0, 0, 0, 0)
width = 8.0
width_curve = SubResource("2")
default_color = Color(0.08549138, 0.3231256, 1, 1)
gradient = SubResource("1")
begin_cap_mode = 2
end_cap_mode = 2
antialiased = true

[node name="snd_play" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2")
volume_db = -25.362
pitch_scale = 0.9

[node name="HitArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
